--- a/src/scss/components/_details.scss
+++ b/src/scss/components/_details.scss
@@ -17,6 +17,7 @@
         @media only screen and (min-width: 1000px) {
             min-width: 450px;
         }
+        box-shadow: var(--Box-Shadow);
     }
 
     &__name {
@@ -38,7 +39,7 @@
             gap: 40px;
         }
         @media only screen and (min-width: 1400px) {
-            gap: 120px;
+            gap: 150px;
         }
     }
 
@@ -55,6 +56,9 @@
             font-size: 16px;
             font-weight: 800;
             margin-bottom: 10px;
+            @media only screen and (min-width: 1000px) {
+                margin-bottom: 0;
+            }
         }
 
         &Btns {
@@ -65,15 +69,23 @@
     }
 
     &__borderCountryBtn {
-      border: 3px solid rgb(230, 230, 230);
+      border: 3px solid var(--Elements-Color);
+      box-shadow: var(--Box-Shadow);
       border-radius: 5px;
       background-color: transparent;
       cursor: pointer;
       transition: var(--Transition);
+      color: var(--Text-Color);
       padding: 5px 20px;
 
       &:hover, &:focus, &:active {
         border: 3px solid rgb(181, 181, 181);
       }
     } 
+
+    &__message{
+        &--hide {
+            display: none;
+        }
+    }
 }
