--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
-@use 'flex-mixin' as flex;
-@use 'components/field';
-@use 'components/details';
-@use 'components/country';
+@use "flex-mixin" as flex;
+@use "components/field";
+@use "components/details";
+@use "components/country";
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
 
 // margins and paddings reset
@@ -41,7 +41,7 @@ body.dark {
 // header styling
 
 .header {
-  @include flex.setFlex(row,space-between);
+  @include flex.setFlex(row, space-between);
   background-color: var(--Elements-Color);
   box-shadow: var(--Box-Shadow);
   padding: 20px;
@@ -49,7 +49,7 @@ body.dark {
   @media only screen and (min-width: 600px) {
     padding: 20px 60px;
   }
-  
+
   &__title {
     font-size: 16px;
     @media only screen and (min-width: 600px) {
@@ -72,7 +72,9 @@ body.dark {
     transition: var(--Transition);
     height: 30px;
 
-    &:hover, &:focus, &:active {
+    &:hover,
+    &:focus,
+    &:active {
       color: var(--Input-Color);
     }
 
@@ -88,26 +90,56 @@ body.dark {
   padding-bottom: 60px;
 
   &__home {
-    &--hide {
-      display: none;
-    }
-
     &Inputs {
-      @include flex.setFlex(row,space-between);
+      @include flex.setFlex(row, space-between);
       gap: 40px;
       flex-wrap: wrap;
       padding: 30px 20px;
       @media only screen and (min-width: 600px) {
         padding: 40px 60px;
       }
-      
+
+      &--hide {
+        display: none;
+      }
     }
 
     &Content {
       @include flex.setFlex();
+      @media only screen and (min-width: 1000px) {
+        justify-content: flex-start;
+      }
       flex-wrap: wrap;
       gap: 80px;
       padding: 0px 60px;
+
+      &--hide {
+        display: none;
+      }
+
+      &Spin {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 100px;
+        animation: spining 1.7s linear infinite;
+
+        &--hide {
+          display: none;
+        }
+
+        @keyframes spining {
+          0% {
+            transform: rotate(0deg);
+          }
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+      }
     }
   }
 
@@ -128,7 +160,8 @@ body.dark {
       box-shadow: var(--Box-Shadow);
       border: none;
       border-radius: 5px;
-      background-color: transparent;
+      color: var(--Text-Color);
+      background-color: var(--Elements-Color);
       cursor: pointer;
       transition: var(--Transition);
       padding: 8px 30px;
@@ -137,7 +170,9 @@ body.dark {
         margin: 60px 0 50px 0;
       }
 
-      &:hover, &:focus, &:active {
+      &:hover,
+      &:focus,
+      &:active {
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       }
       &Icon {
